// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> <Alert variant="error" /> renders correctly 1`] = `
.emotion-13 {
  padding-left: 32px;
  padding-right: 32px;
}

.emotion-11 {
  padding-top: 32px;
  padding-bottom: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-9 {
  margin-bottom: 0;
  text-align: left;
}

.emotion-7 {
  padding-right: 16px;
}

.emotion-15 {
  margin-bottom: 16px;
  background-color: ui.errorBackground;
}

.emotion-3 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: ui.error;
}

.emotion-1 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: ui.error;
}

<Alert
  mb={3}
  variant="error"
>
  <Component
    mb={3}
    variant="error"
  >
    <Box
      bg="ui.errorBackground"
      mb={3}
    >
      <div
        className="emotion-15 emotion-8"
      >
        <Box
          px={4}
        >
          <div
            className="emotion-13 emotion-8"
          >
            <Flex
              py={4}
            >
              <div
                className="emotion-11 emotion-12"
              >
                <Box
                  pr={3}
                >
                  <div
                    className="emotion-7 emotion-8"
                  >
                    <Icon
                      color="ui.error"
                      name="warning"
                      size={24}
                      title={null}
                    >
                      <Base
                        className="emotion-3 emotion-0"
                        color="ui.error"
                        name="warning"
                        size={24}
                        title={null}
                      >
                        <StyledSvg
                          className="emotion-3 emotion-0"
                          color="ui.error"
                          fill="currentcolor"
                          height={24}
                          title="warning"
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <svg
                            className="emotion-0 emotion-1 emotion-2"
                            color="ui.error"
                            fill="currentcolor"
                            height={24}
                            title="warning"
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <path
                              d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                            />
                          </svg>
                        </StyledSvg>
                      </Base>
                    </Icon>
                  </div>
                </Box>
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="emotion-9 emotion-10"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Box>
      </div>
    </Box>
  </Component>
</Alert>
`;

exports[`<Alert /> <Alert variant="info" /> renders correctly 1`] = `
.emotion-13 {
  padding-left: 32px;
  padding-right: 32px;
}

.emotion-11 {
  padding-top: 32px;
  padding-bottom: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-9 {
  margin-bottom: 0;
  text-align: left;
}

.emotion-7 {
  padding-right: 16px;
}

.emotion-15 {
  margin-bottom: 16px;
  background-color: ui.infoBackground;
}

.emotion-3 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: greys.charcoal;
}

.emotion-1 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: greys.charcoal;
}

<Alert
  mb={3}
  variant="info"
>
  <Component
    mb={3}
    variant="info"
  >
    <Box
      bg="ui.infoBackground"
      mb={3}
    >
      <div
        className="emotion-15 emotion-8"
      >
        <Box
          px={4}
        >
          <div
            className="emotion-13 emotion-8"
          >
            <Flex
              py={4}
            >
              <div
                className="emotion-11 emotion-12"
              >
                <Box
                  pr={3}
                >
                  <div
                    className="emotion-7 emotion-8"
                  >
                    <Icon
                      color="greys.charcoal"
                      name="info"
                      size={24}
                      title={null}
                    >
                      <Base
                        className="emotion-3 emotion-0"
                        color="greys.charcoal"
                        name="info"
                        size={24}
                        title={null}
                      >
                        <StyledSvg
                          className="emotion-3 emotion-0"
                          color="greys.charcoal"
                          fill="currentcolor"
                          height={24}
                          title="info"
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <svg
                            className="emotion-0 emotion-1 emotion-2"
                            color="greys.charcoal"
                            fill="currentcolor"
                            height={24}
                            title="info"
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                            />
                          </svg>
                        </StyledSvg>
                      </Base>
                    </Icon>
                  </div>
                </Box>
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="emotion-9 emotion-10"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Box>
      </div>
    </Box>
  </Component>
</Alert>
`;

exports[`<Alert /> <Alert variant="success" /> renders correctly 1`] = `
.emotion-13 {
  padding-left: 32px;
  padding-right: 32px;
}

.emotion-11 {
  padding-top: 32px;
  padding-bottom: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-9 {
  margin-bottom: 0;
  text-align: left;
}

.emotion-15 {
  margin-bottom: 16px;
  background-color: ui.successBackground;
}

.emotion-7 {
  padding-right: 16px;
}

.emotion-3 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: ui.success;
}

.emotion-1 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: ui.success;
}

<Alert
  mb={3}
  variant="success"
>
  <Component
    mb={3}
    variant="success"
  >
    <Box
      bg="ui.successBackground"
      mb={3}
    >
      <div
        className="emotion-15 emotion-8"
      >
        <Box
          px={4}
        >
          <div
            className="emotion-13 emotion-8"
          >
            <Flex
              py={4}
            >
              <div
                className="emotion-11 emotion-12"
              >
                <Box
                  pr={3}
                >
                  <div
                    className="emotion-7 emotion-8"
                  >
                    <Icon
                      color="ui.success"
                      name="checkCircle"
                      size={24}
                      title={null}
                    >
                      <Base
                        className="emotion-3 emotion-0"
                        color="ui.success"
                        name="checkCircle"
                        size={24}
                        title={null}
                      >
                        <StyledSvg
                          className="emotion-3 emotion-0"
                          color="ui.success"
                          fill="currentcolor"
                          height={24}
                          title="checkCircle"
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <svg
                            className="emotion-0 emotion-1 emotion-2"
                            color="ui.success"
                            fill="currentcolor"
                            height={24}
                            title="checkCircle"
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                            />
                          </svg>
                        </StyledSvg>
                      </Base>
                    </Icon>
                  </div>
                </Box>
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="emotion-9 emotion-10"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Box>
      </div>
    </Box>
  </Component>
</Alert>
`;

exports[`<Alert /> <Alert.error /> renders correctly 1`] = `
.emotion-13 {
  padding-left: 32px;
  padding-right: 32px;
}

.emotion-11 {
  padding-top: 32px;
  padding-bottom: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-9 {
  margin-bottom: 0;
  text-align: left;
}

.emotion-7 {
  padding-right: 16px;
}

.emotion-15 {
  margin-bottom: 16px;
  background-color: ui.errorBackground;
}

.emotion-3 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: ui.error;
}

.emotion-1 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: ui.error;
}

<Alert.error
  mb={3}
  variant="error"
>
  <Component
    mb={3}
    variant="error"
  >
    <Box
      bg="ui.errorBackground"
      mb={3}
    >
      <div
        className="emotion-15 emotion-8"
      >
        <Box
          px={4}
        >
          <div
            className="emotion-13 emotion-8"
          >
            <Flex
              py={4}
            >
              <div
                className="emotion-11 emotion-12"
              >
                <Box
                  pr={3}
                >
                  <div
                    className="emotion-7 emotion-8"
                  >
                    <Icon
                      color="ui.error"
                      name="warning"
                      size={24}
                      title={null}
                    >
                      <Base
                        className="emotion-3 emotion-0"
                        color="ui.error"
                        name="warning"
                        size={24}
                        title={null}
                      >
                        <StyledSvg
                          className="emotion-3 emotion-0"
                          color="ui.error"
                          fill="currentcolor"
                          height={24}
                          title="warning"
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <svg
                            className="emotion-0 emotion-1 emotion-2"
                            color="ui.error"
                            fill="currentcolor"
                            height={24}
                            title="warning"
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <path
                              d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                            />
                          </svg>
                        </StyledSvg>
                      </Base>
                    </Icon>
                  </div>
                </Box>
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="emotion-9 emotion-10"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Box>
      </div>
    </Box>
  </Component>
</Alert.error>
`;

exports[`<Alert /> <Alert.info /> renders correctly 1`] = `
.emotion-13 {
  padding-left: 32px;
  padding-right: 32px;
}

.emotion-11 {
  padding-top: 32px;
  padding-bottom: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-9 {
  margin-bottom: 0;
  text-align: left;
}

.emotion-7 {
  padding-right: 16px;
}

.emotion-15 {
  margin-bottom: 16px;
  background-color: ui.infoBackground;
}

.emotion-3 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: greys.charcoal;
}

.emotion-1 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: greys.charcoal;
}

<Alert.info
  mb={3}
  variant="info"
>
  <Component
    mb={3}
    variant="info"
  >
    <Box
      bg="ui.infoBackground"
      mb={3}
    >
      <div
        className="emotion-15 emotion-8"
      >
        <Box
          px={4}
        >
          <div
            className="emotion-13 emotion-8"
          >
            <Flex
              py={4}
            >
              <div
                className="emotion-11 emotion-12"
              >
                <Box
                  pr={3}
                >
                  <div
                    className="emotion-7 emotion-8"
                  >
                    <Icon
                      color="greys.charcoal"
                      name="info"
                      size={24}
                      title={null}
                    >
                      <Base
                        className="emotion-3 emotion-0"
                        color="greys.charcoal"
                        name="info"
                        size={24}
                        title={null}
                      >
                        <StyledSvg
                          className="emotion-3 emotion-0"
                          color="greys.charcoal"
                          fill="currentcolor"
                          height={24}
                          title="info"
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <svg
                            className="emotion-0 emotion-1 emotion-2"
                            color="greys.charcoal"
                            fill="currentcolor"
                            height={24}
                            title="info"
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                            />
                          </svg>
                        </StyledSvg>
                      </Base>
                    </Icon>
                  </div>
                </Box>
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="emotion-9 emotion-10"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Box>
      </div>
    </Box>
  </Component>
</Alert.info>
`;

exports[`<Alert /> <Alert.success /> renders correctly 1`] = `
.emotion-13 {
  padding-left: 32px;
  padding-right: 32px;
}

.emotion-11 {
  padding-top: 32px;
  padding-bottom: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-9 {
  margin-bottom: 0;
  text-align: left;
}

.emotion-15 {
  margin-bottom: 16px;
  background-color: ui.successBackground;
}

.emotion-7 {
  padding-right: 16px;
}

.emotion-3 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: ui.success;
}

.emotion-1 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: ui.success;
}

<Alert.success
  mb={3}
  variant="success"
>
  <Component
    mb={3}
    variant="success"
  >
    <Box
      bg="ui.successBackground"
      mb={3}
    >
      <div
        className="emotion-15 emotion-8"
      >
        <Box
          px={4}
        >
          <div
            className="emotion-13 emotion-8"
          >
            <Flex
              py={4}
            >
              <div
                className="emotion-11 emotion-12"
              >
                <Box
                  pr={3}
                >
                  <div
                    className="emotion-7 emotion-8"
                  >
                    <Icon
                      color="ui.success"
                      name="checkCircle"
                      size={24}
                      title={null}
                    >
                      <Base
                        className="emotion-3 emotion-0"
                        color="ui.success"
                        name="checkCircle"
                        size={24}
                        title={null}
                      >
                        <StyledSvg
                          className="emotion-3 emotion-0"
                          color="ui.success"
                          fill="currentcolor"
                          height={24}
                          title="checkCircle"
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <svg
                            className="emotion-0 emotion-1 emotion-2"
                            color="ui.success"
                            fill="currentcolor"
                            height={24}
                            title="checkCircle"
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                            />
                          </svg>
                        </StyledSvg>
                      </Base>
                    </Icon>
                  </div>
                </Box>
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="emotion-9 emotion-10"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Box>
      </div>
    </Box>
  </Component>
</Alert.success>
`;

exports[`<Alert /> contained renders correctly 1`] = `
.emotion-6 {
  margin-bottom: 16px;
  background-color: greys.porcelain;
}

.emotion-2 {
  padding-top: 32px;
  padding-bottom: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  margin-bottom: 0;
  text-align: left;
}

.emotion-4 {
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  max-width: default;
}

<Alert
  contained={true}
  mb={3}
  variant="default"
>
  <Component
    contained={true}
    mb={3}
    variant="default"
  >
    <Box
      bg="greys.porcelain"
      mb={3}
    >
      <div
        className="emotion-6 emotion-7"
      >
        <Container
          gutter="default"
          maxWidth="default"
        >
          <div
            className="emotion-4 emotion-5"
          >
            <Flex
              py={4}
            >
              <div
                className="emotion-2 emotion-3"
              >
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="emotion-0 emotion-1"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Container>
      </div>
    </Box>
  </Component>
</Alert>
`;

exports[`<Alert /> renders correctly 1`] = `
.emotion-6 {
  margin-bottom: 16px;
  background-color: greys.porcelain;
}

.emotion-4 {
  padding-left: 32px;
  padding-right: 32px;
}

.emotion-2 {
  padding-top: 32px;
  padding-bottom: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  margin-bottom: 0;
  text-align: left;
}

<Alert
  mb={3}
  variant="default"
>
  <Component
    mb={3}
    variant="default"
  >
    <Box
      bg="greys.porcelain"
      mb={3}
    >
      <div
        className="emotion-6 emotion-5"
      >
        <Box
          px={4}
        >
          <div
            className="emotion-4 emotion-5"
          >
            <Flex
              py={4}
            >
              <div
                className="emotion-2 emotion-3"
              >
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="emotion-0 emotion-1"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Box>
      </div>
    </Box>
  </Component>
</Alert>
`;
